# P1TJNS

./: .env  Cargo.toml  README.md
src/: main.rs
src/components/: navbar.html
src/controllers/: delete.rs  register.rs  update.rs
src/templates/: delete_user.html  form.html  index.html  register.html  update_user.html
