[package]
name = "P1TJNS"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
mysql = "25.0.1"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
bcrypt = "0.10"
validator = "0.14"
validator_derive = "0.14"
log = "0.4"
